<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark_shade"
    tools:context=".Activities.AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/bg_light">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_app_about_header"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_app_about"
            android:textAlignment="textStart"
            android:layout_margin="10dp"
            android:textSize="17sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star_line5"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textSize="17sp"
            />
    </LinearLayout>
</LinearLayout>