<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/background_dark_shade"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/background_light_shade">

        <ImageView
            android:id="@+id/imgViewLogin"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_mode_of_travel_24"
            app:tint="@color/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_username"
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_login"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:text="@string/txt_not_account"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/txt_account_create"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</LinearLayout>