<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:orientation="vertical"
    tools:context=".Activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_light"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@mipmap/logo"
            app:tint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/background_light_shade"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_city_spinner"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown_edc_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBookings"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_home_page_button_filled"
                android:elevation="5dp"
                android:text="@string/btn_view_booking"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_help"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="0.5"
                    android:text="@string/btn_help"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/colorPrimary"
                    android:layout_marginHorizontal="10dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_about"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="0.5"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/colorPrimary"
                    android:text="@string/btn_about"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_logout"
                android:textStyle="bold"
                android:textSize="20sp"
                app:strokeWidth="0dp"
                android:layout_marginVertical="20dp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>